# robo2023_framework

./: README.md
robo2023/: CMakeLists.txt  package.xml
robo2023/config/: ekf.yaml  mapper_params_online_async.yaml  my_controllers.yaml  twist_mux.yaml
robo2023/description/: gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
robo2023/launch/: launch_robot.launch.py  launch_sim.launch.py  main_launch.py  rsp.launch.py
robo2023/scripts/: imgproc_node.py  main_node.py  navigation_node.py  servo_node.py
robo2023/src/: imgproc_node.py  main_node.py  navigation_node.py  servo_node.py
robo2023/worlds/: robo2023.world
robo2023_interfaces/: CMakeLists.txt  package.xml
robo2023_interfaces/srv/: Imgres.srv  Servores.srv
